# cpp_string_search

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  strings_search.cpp  unit_test_macro.h  wumanber_search.cpp  wumanber_search.h
aho-corasick-go/: code.go  code_test.go  go.mod
cpp_string_search/: strings_search.cpp  test_wumanber.txt  wumanber_search.cpp  wumanber_search.h
string_search/: CMakeLists.txt
string_search/include/string_search/: ac_search.h  string_search.h  wumanber_search.h
string_search/src/: ac_search.cpp  string_search.cpp  wumanber_search.cpp
tests/: CMakeLists.txt  command.bat  command.sh  test.cpp  test_text.txt  test_wumanber.txt  unit_test_macro.h
